<resources>
    <string name="app_name">Tavaram</string>
    <string name="tamil">தமிழ்</string>
    <string name="select_image">Selected Image</string>
    <string name="english">english</string>
    <string name="TODO">TODO</string>
    <string name="input_text">Enter image path</string>
    <string name="Submit">Submit</string>
    <string name="Note"> Note not available.</string>
    <string name="onLanguageSelect"> onLanguageSelect</string>
    <string name="app_logo">App logo</string>
    <string name="note_not_available">Note not available.</string>


</resources>